fix(switch-language):fix position of the switch on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,7 @@ input[type=checkbox]{
 	height: 0;
 	width: 0;
 	visibility: hidden;
+	position:relative;
 }
 
 label {
@@ -51,9 +52,9 @@ label:active:after {
 }
 
 centering
-body {
+/* body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-}
+} */
